# dijkstra_openmpi

./: CMakeLists.txt  README.md  main.cpp
dijkstra/: CMakeLists.txt  dijkstra.cpp  dijkstra.hpp
